--- a/app.json
+++ b/app.json
@@ -163,6 +163,16 @@
             "description": "",
             "value": "default" ,
             "required": true
+      },
+         "MUTE_MESSAGE": {
+            "description": "",
+            "value": "default" ,
+            "required": true
+      },
+         "UNMUTE_MESSAGE": {
+            "description": "",
+            "value": "default" ,
+            "required": true
       }
         
      },
