--- a/package.json
+++ b/package.json
@@ -55,8 +55,8 @@
     "node-fetch": "^2.6.1" ,
      "translatte " : "^3.0.1",
      "@hapi/boom" : "^10.0.0",
-     "g-i-s" : "^2.1.6"  
-		
+     "g-i-s" : "^2.1.6"  ,
+     "emoji-api" : "^2.0.1"" 	
 
   }
 }
