--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
      "translatte " : "^3.0.1",
      "@hapi/boom" : "^10.0.0",
      "g-i-s" : "^2.1.6"  ,
-     "emoji-api" : "^2.0.1"" 	
+     "emoji-api" : "^2.0.1" 	
 
   }
 }
