--- a/app.json
+++ b/app.json
@@ -81,7 +81,7 @@
       },
       "ALIVE_LOGO": {
             "description": "",
-            "value": "https://i.ibb.co/V9jYrQC/aqua-md.jpg" ,
+            "value": "https://telegra.ph/file/85fe740b2385a55178500.jpg" ,
             "required": true
       },
       "DEPLOYER": {
