--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-    "name": "Aquabot - MD",
-    "description": "AQUABOT  - Makes it easy and fun to use Whatsapp.",
-    "logo": "https://i.ibb.co/V9jYrQC/aqua-md.jpg",
+    "name": "pramesh lion bot - MD",
+    "description": "pramesh lion bot  - Makes it easy and fun to use Whatsapp.",
+    "logo": "https://i.ibb.co/K54KLgF/Picsart-22-07-03-15-45-00-698.jpg",
     "keywords": ["whatsapp", "userbot", "aqua", "bot", "ai" , "MD" ],
     "repository": "https://github.com/sanuwaofficial/AQUABOT-MD",
     "website":   "https://aquabot.ga/",
@@ -18,44 +18,44 @@
              },
             "OWN_NAME": {
             "description": "",
-            "value": "Sanuwa Official" ,
+            "value": "pramesh nilakshan " ,
             "required": true
              },
              "OWN_NUMBER": {
             "description": "",
-            "value": "94701629707" ,
+            "value": "94704472592" ,
             "required": true
              },
        
             "AUTO_REACT": {
             "description": "",
-            "value": "false" ,
+            "value": "true" ,
             "required": true
              },
            
            "URL_1NAME": {
             "description": "",
-            "value": "🎊INSTAGRAM🎊" ,
+            "value": "☸️my whatsapp grop ☸️" ,
             "required": true
       },
            "URL_1LINK": {
             "description": "",
-            "value": "https://www.instagram.com/__.sanuwa.__/" ,
+            "value": "https://chat.whatsapp.com/DKzR6vonZFzF8nlE8CEJPl" ,
             "required": true
       },
      "URL_2NAME": {
             "description": "",
-            "value": "💻GITHUB💻" ,
+            "value": "😎😎😎😎😎" ,
             "required": true
       },
        "URL_2LINK": {
             "description": "",
-            "value": "https://github.com/sanuwaofficial" ,
+            "value": "https://chat.whatsapp.com/E3enguWGKzLJT0PES2AhrY" ,
             "required": true
       },
        "FOOTER": {
             "description": "",
-            "value": "𝙿𝙾𝚆𝙴𝚁𝙴𝙳 𝙱𝚈 𝙰𝚀𝚄𝙰𝙱𝙾𝚃 ²⁰²²" ,
+            "value": "pramesh lion bot" ,
             "required": true
       },
      "ANTI_LINK": {
@@ -65,7 +65,7 @@
       },
        "CAPTION": {
             "description": "",
-            "value": "© 𝙶𝙴𝙽𝙴𝚁𝙰𝚃𝙴𝙳 𝙱𝚈 𝙰𝚀𝚄𝙰 ²⁰²²" ,
+            "value": "❤️pramesh lion bot" ,
             "required": true
       },
        "INBOX_BLOCK": {
@@ -80,7 +80,7 @@
       },
       "ALIVE_MESSAGE": {
             "description": "",
-            "value": "default", 
+            "value": "හායි    i am pramesh lion bot☸️☸️ ", 
             "required": true
       },
       "ALIVE_LOGO": {
@@ -90,7 +90,7 @@
       },
       "DEPLOYER": {
             "description": "",
-            "value": "AQUA USER" ,
+            "value": "pramesh " ,
             "required": true
       },
        "SONG_DOWN": {
@@ -140,7 +140,7 @@
       },
          "LANGUAGE": {
             "description": "",
-            "value": "EN" ,
+            "value": "SI" ,
             "required": true
       },
          "HEROKU": {
