--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Aquabot-MD",
+  "name": "pramesh lion bot",
   "version": "1.0.0",
   "description": "aquabot happy for whatsapp.",
   "main": "/aquabot/bot.js",
