--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "type": "git",
     "url": "git+https://github.com/sanuwaofficial/AQUABOT-MD.git"
   },
-  "author": "sanuwa official",
-  "developer": "sanuwa",
+  "author": "pramesh nilakshan ",
+  "developer": "pramesh ",
   "license": "GPL-3.0-or-later",
   "bugs": {
     "url": "https://github.com/sanuwaofficial/AQUABOT-MD/issues"
