--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "author": "pramesh nilakshan ",
   "developer": "pramesh ",
   "license": "GPL-3.0-or-later",
-  "bugs": { prameshnilakshan7
+  "bugs": {☸️😕🙃☸️🙃😕🙃☹️🙃⚫😇😕😇😕🙃🟤🙃⚫😇😕🙃⚫🙃🟤🙃⚫🙃⚫🙃🟤🙃🟤🙃😕🙃😕🙃⚫🙃🟤🙃🟤⚫🙃⚫🙃⚫🙃⚫🙃⚫🙃
     "url": "https://github.com/prameshnilakshan7/AQUABOT-MD/issues"
   },
   "homepage": "https://github.com/prameshnilakshan7/AQUABOT-MD",
