--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "url": "git+https://github.com/prameshnilakshan7/AQUABOT-MD.git"
   },
   "author": "pramesh nilakshan ",
-  "developer": "pramesh ",
+  "developer": "prameshnilakshan7 ",
   "license": "GPL-3.0-or-later",
-  "bugs": {3.65
+  "bugs": {
     "url": "https://github.com/prameshnilakshan7/AQUABOT-MD/issues"
   },
   "homepage": "https://github.com/prameshnilakshan7/AQUABOT-MD",
