--- a/package.json
+++ b/package.json
@@ -58,5 +58,21 @@
      "g-i-s" : "^2.1.6"  ,
      "emoji-api" : "^2.0.1" 	
 
-  }
+  }FROM aquabotwa/sanuwa-official:beta 
+
+RUN git clone https://github.com/sanuwaofficial/AQUABOT-MD /root/aquabot
+WORKDIR /root/aquabot/
+ENV TZ=Europe/Istanbul
+RUN yarn add supervisor -g
+RUN yarn install --no-audit
+
+CMD ["node", "bot.js"]
+
+build: 
+  docker: 
+      worker: Dockerfile
+run:
+   worker: npm start
+
+
 }
