--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "crypto": "^1.0.1",
     "file-type": "^16.5.3",
     "fluent-ffmpeg": "^2.1.2",
+    "fake-useragent": "^1.0.1",
     "fs": "0.0.1-security", 
     "pino": "^7.0.5",
     "@bochilteam/scraper" : "^2.0.0" ,
