--- a/package.json
+++ b/package.json
@@ -57,5 +57,6 @@
      "translatte " : "^3.0.1",
      "@hapi/boom" : "^10.0.0",
      "g-i-s" : "^2.1.6"  ,
-     "emoji-api" : "^2.0.1" 	
+     "emoji-api" : "^2.0.1" ,
+    "ytdl-core": "^4.9.1"
  }}
