--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^0.24.0",
     "heroku-client": "^3.1.0", 
     "stream" : "^0.0.2" ,
+    "kyakusei" : "^1.0.1",
     "simple-git": "^2.37.0",  
     "chalk": "^4.1.2",
     "cookie": "^0.4.1",  
