--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "sanuwa-npm" : "^1.2.0",
     "simple-git": "^2.37.0",  
     "chalk": "^4.1.2",
+    "object-query-string" : "^1.2.0"
     "cookie": "^0.4.1",  
     "got": "^11.8.2",
     "google-translate-tts": "^0.3.0",
