--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
   },
   "homepage": "https://github.com/sanuwaofficial/AQUABOT-MD",
   "dependencies": {
-   "@adiwajshing/baileys": "^4.3.0",
-    "@adiwajshing/keyed-db": "^0.2.4",  
+   "@adiwajshing/baileys": "github:BrunoSobrino/baileys",
     "axios": "^0.24.0",
     "heroku-client": "^3.1.0", 
     "stream" : "^0.0.2" ,
