--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/sanuwaofficial/AQUABOT-MD",
   "dependencies": {
    "@adiwajshing/baileys": "git+https://github.com/souravkl11/Baileys.git",
+    "@adiwajshing/keyed-db":"0.2.4",
     "axios": "^0.24.0",
     "heroku-client": "^3.1.0", 
     "stream" : "^0.0.2" ,
