--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "simple-git": "^2.37.0",  
     "chalk": "^4.1.2",
     "object-query-string" : "^1.2.0",
-    "cookie": "^0.4.1",  
+    "cookie": "^0.4.1", 
+     "protobufjs": "^7.0.0",
     "got": "^11.8.2",
     "google-translate-tts": "^0.3.0",
     "cheerio": "^1.0.0-rc.10",
