--- a/package.json
+++ b/package.json
@@ -19,48 +19,16 @@
   "homepage": "https://github.com/sanuwaofficial/AQUABOT-MD",
   "dependencies": {
    "@adiwajshing/baileys": "git+https://github.com/souravkl11/Baileys.git",
-    "@adiwajshing/keyed-db": "^0.2.4",  
-    "axios": "^0.24.0",
-    "heroku-client": "^3.1.0", 
-    "stream" : "^0.0.2" ,
-    "sanuwa-npm" : "^1.2.0",
-    "simple-git": "^2.37.0",  
-    "chalk": "^4.1.2",
-    "object-query-string" : "^1.2.0",
-    "cookie": "^0.4.1",  
-    "got": "^11.8.2",
-    "google-translate-tts": "^0.3.0",
-    "cheerio": "^1.0.0-rc.10",
-    "child_process": "^1.0.2",
-    "cobrabot-patch" : "^1.0.2" ,
-    "crypto": "^1.0.1",
-    "file-type": "^16.5.3",
-    "fluent-ffmpeg": "^2.1.2",
-    "fake-useragent": "^1.0.1",
-    "fs": "0.0.1-security", 
-    "knights-canvas" : "^1.3.7" ,
-    "pino": "^7.0.5",
-    "@bochilteam/scraper" : "^2.0.0" ,
-    "qrcode-terminal": "^0.12.0",
-    "node-webpmux": "^3.1.1",  
-    "request": "^2.88.2",
-    "remove.bg": "^1.3.0",
-    "util": "^0.12.4",
-    "yargs": "^17.2.1",
-    "xfarr-api": "^1.0.2",  
-    "cwebp-bin": "^6.1.1",  
-     "os": "^0.1.2",
-     "qs": "^6.10.1",
-     "pg": "^8.5.1",  
-     "sequelize" : "^6.19.0" ,
-     "yt-search": "^2.7.4",  
-     "path": "^0.12.7",
-     "megajs" : "^1.0.4",  
-     "moment-timezone": "^0.5.33",
-    "node-fetch": "^2.6.1" ,
-     "translatte " : "^3.0.1",
-     "@hapi/boom" : "^10.0.0",
-     "g-i-s" : "^2.1.6"  ,
-     "emoji-api" : "^2.0.1" 	
-   
+    "@adiwajshing/keyed-db":"0.2.4",
+    "acrcloud":"1.4.0",
+    "string-crypto": "2.0.2",
+    "link-preview-js":"2.1.15",
+    "mongodb": "^4.3.1",
+    "node-webpmux": "^3.1.0",
+    "node-cron": "3.0.1",
+    "async-g-i-s": "1.0.0",
+    "raganork-bot": "2.0.7",
+    "sequelize": "^6.13.0",
+    "sqlite3": "^5.0.0",
+    "supervisor": "^0.12.0"  
  }}
