--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "aquabot happy for whatsapp.",
   "main": "/aquabot/bot.js",
   "scripts": {
-    "start": "supervisor -s bot.js"
+    "start": "node bot.js"
   },
   "repository": {
     "type": "git",
@@ -18,7 +18,7 @@
   },
   "homepage": "https://github.com/sanuwaofficial/AQUABOT-MD",
   "dependencies": {
-     "@adiwajshing/baileys": "^4.3.0",
+     "@adiwajshing/baileys": "git+https://github.com/ravindu01manoj/Baileys",
     "@adiwajshing/keyed-db": "^0.2.4",  
     "axios": "^0.24.0",
     "heroku-client": "^3.1.0", 
@@ -46,8 +46,7 @@
     "request": "^2.88.2",
     "remove.bg": "^1.3.0",
     "util": "^0.12.4",
-    "yargs": "^17.2.1",
-    "xfarr-api": "^1.0.2",  
+    "yargs": "^17.2.1",  
     "cwebp-bin": "^6.1.1",  
      "os": "^0.1.2",
      "qs": "^6.10.1",
