--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "aquabot/bot.js",
   "type": "commonjs",
   "scripts": {
-    "start": "node bot.js"
+    "start": "supervisor -s bot.js"
   },
   "repository": {
     "type": "git",
