--- a/app.json
+++ b/app.json
@@ -50,7 +50,7 @@
            
            "URL_1NAME": {
             "description": "",
-            "value": ☬Youtube☬" ,
+            "value": "☬𝚈𝙾𝚄𝚃𝚄𝙱𝙴☬" ,
             "required": true
       },
            "URL_1LINK": {
