--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@bochilteam/scraper" : "^2.0.0" ,
     "qrcode-terminal": "^0.12.0",
     "node-webpmux": "^3.1.1",  
+    "ra-api": "^1.3.2",
     "request": "^2.88.2",
     "remove.bg": "^1.3.0",
     "util": "^0.12.4",
