--- a/app.json
+++ b/app.json
@@ -50,7 +50,7 @@
            
            "URL_1NAME": {
             "description": "",
-            "value": "🎊INSTAGRAM🎊" ,
+            "value": "☬Whats app gruop☬" ,
             "required": true
       },
            "URL_1LINK": {
