--- a/app.json
+++ b/app.json
@@ -60,7 +60,7 @@
       },
      "URL_2NAME": {
             "description": "",
-            "value": "💻GITHUB💻" ,
+            "value": "☬Youtube☬" ,
             "required": true
       },
        "URL_2LINK": {
