--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "Aquabot-MD",
+  "name": "sakunbot-MD",
   "version": "1.0.0",
-  "description": "aquabot happy for whatsapp.",
+  "description": "Sakun happy for whatsapp.",
   "main": "/aquabot/bot.js",
   "type": "commonjs",
   "scripts": {
@@ -9,18 +9,18 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/sanuwaofficial/AQUABOT-MD.git"
+    "url": "git+https://github.com/sakunkaveesha22/AQUABOT-MD.git"
   },
   "engines" : { 
     "node" : ">=14.19.3"
   },
-  "author": "sanuwa official",
-  "developer": "sanuwa",
+  "author": "sakun kaveesha",
+  "developer": "sakun",
   "license": "GPL-3.0-or-later",
   "bugs": {
-    "url": "https://github.com/sanuwaofficial/AQUABOT-MD/issues"
+    "url": "https://github.com/sakunkaveesha22/AQUABOT-MD/issues"
   },
-  "homepage": "https://github.com/sanuwaofficial/AQUABOT-MD",
+  "homepage": "https://github.com/sakunkaveesha22/AQUABOT-MD",
   "dependencies": {
      "@adiwajshing/baileys": "^4.4.0",
     "@adiwajshing/keyed-db": "^0.2.4",  
