--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
     "name": "SAKUNBOT - MD",
-    "description": "AQUABOT  - Makes it easy and fun to use Whatsapp.",
+    "description": "SAKUNBOT  - Makes it easy and fun to use Whatsapp.",
     "logo": "https://i.ibb.co/V9jYrQC/aqua-md.jpg",
     "keywords": ["whatsapp", "userbot", "aqua", "bot", "ai" , "MD" ],
     "repository": "https://github.com/sakunkaveesha22/AQUABOT-MD",
