--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "Aquabot-MD",
+  "name": "Sakunbot-MD",
   "version": "1.0.0",
-  "description": "aquabot happy for whatsapp.",
+  "description": "Sakun happy for whatsapp.",
   "main": "/aquabot/bot.js",
   "type": "commonjs",
   "scripts": {
@@ -15,7 +15,7 @@
     "node" : ">=14.19.3"
   },
   "author": "sanuwa official",
-  "developer": "sanuwa",
+  "developer": "sakun",
   "license": "GPL-3.0-or-later",
   "bugs": {
     "url": "https://github.com/sanuwaofficial/AQUABOT-MD/issues"
