--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
     "description": "SAKUNBOT  - Makes it easy and fun to use Whatsapp.",
     "logo": "https://i.ibb.co/V9jYrQC/aqua-md.jpg",
     "keywords": ["whatsapp", "userbot", "sakun", "bot", "ai" , "MD" ],
-    "repository": "https://github.com/sakun/SAKUNBOT-MD",
+    "repository": "https://github.com/sanuwaofficial/AQUABOT-MD",
     "website":   "https://aquabot.ga/",
     "success_url": "https://aquabot.ga",
     "stack": "container",
