--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "dependencies": {
      "@adiwajshing/baileys": "^4.4.0",
     "@adiwajshing/keyed-db": "^0.2.4",  
-    "axios": "^0.24.0",
+    "axios": "0.27.2",
     "heroku-client": "^3.1.0", 
     "stream" : "^0.0.2" ,
     "sanuwa-npm" : "^1.2.0",
@@ -34,7 +34,7 @@
     "cookie": "^0.4.1",  
     "got": "^11.8.2",
     "google-translate-tts": "^0.3.0",
-    "cheerio": "^1.0.0-rc.10",
+    "cheerio": "0.22.0",
     "child_process": "^1.0.2",
     "cobrabot-patch" : "^1.0.2" ,
     "crypto": "^1.0.1",
